--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/invoice_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -111,7 +112,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:layout_marginEnd="35dp"
                         android:src="@drawable/ic_line"
                         tools:ignore="ContentDescription" />
                     <LinearLayout
@@ -133,7 +133,6 @@
                             android:layout_height="wrap_content"
                             android:paddingVertical="5dp"
                             android:paddingStart="10dp"
-                            android:layout_marginEnd="30dp"
                             android:orientation="horizontal"
                             android:layout_alignParentStart="true"
                             android:layout_alignParentEnd="true"
@@ -213,7 +212,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:layout_marginEnd="35dp"
                             android:src="@drawable/ic_line"
                             tools:ignore="ContentDescription" />
 
@@ -295,7 +293,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:layout_marginEnd="35dp"
                             android:src="@drawable/ic_line"
                             tools:ignore="ContentDescription" />
 
@@ -339,7 +336,6 @@
                         android:layout_marginTop="10dp"
                         android:src="@drawable/ic_line"
                         android:layout_marginBottom="20dp"
-                        android:layout_marginEnd="35dp"
                         tools:ignore="ContentDescription" />
 
                 </LinearLayout>
