--- a/app/src/main/res/layout/activity_booking_detail.xml
+++ b/app/src/main/res/layout/activity_booking_detail.xml
@@ -487,31 +487,17 @@
 
                     </androidx.cardview.widget.CardView>
 
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/trainer_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/ll_booking"
-                        android:layout_marginBottom="20dp"
-                        android:background="@color/card_view"
-                        app:cardCornerRadius="20dp"
-                        tools:ignore="ObsoleteLayoutParam">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-
-                            </LinearLayout>
-                        </RelativeLayout>
-
-                    </androidx.cardview.widget.CardView>
-
+                   <TextView
+                       android:id="@+id/invoice"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:text="Download invoice"
+                       android:textSize="25sp"
+                       android:padding="30dp"
+                       android:layout_marginBottom="30dp"
+                       android:fontFamily="@font/opensans_extrabold"
+                       android:textColor="@color/dark_cyan"
+                       />
 
 
                 </LinearLayout>
