--- a/app/src/main/res/layout/diet_list_item.xml
+++ b/app/src/main/res/layout/diet_list_item.xml
@@ -26,12 +26,9 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/active_card"
                 android:layout_width="300dp"
-                android:layout_height="200dp"
+                android:layout_height="250dp"
                 android:backgroundTint="@color/card_view"
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="60dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_margin="20dp"
                 app:cardCornerRadius="20dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
@@ -44,9 +41,10 @@
 
 
                     <ImageView
+                        android:scaleType="centerCrop"
                         android:id="@+id/diet_image"
-                        android:layout_width="300dp"
-                        android:layout_height="200dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentTop="true"
