--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -138,14 +138,15 @@
                         android:id="@+id/Weight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:layout_marginStart="20dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginStart="22dp"
                         android:layout_marginTop="20dp"
-                        android:textColor="@color/black"
-                        android:text="@string/Weight"
+                        android:layout_marginEnd="-1dp"
                         android:fontFamily="@font/nunito_bold"
+                        android:text="@string/Weight"
+                        android:textColor="@color/black"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         tools:ignore="HardcodedText" />
