--- a/app/src/main/res/layout/activity_approved_trainer_profile.xml
+++ b/app/src/main/res/layout/activity_approved_trainer_profile.xml
@@ -331,9 +331,7 @@
                             android:id="@+id/xml3_rating_bar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:numStars="5"
-                            android:stepSize="0.5"
-                            android:rating="2.5"
+                            android:isIndicator="true"
                             android:layout_marginBottom="16dp"
                             android:progressTint="@color/dark_cyan"/>
                     </RelativeLayout>
