--- a/app/src/main/res/layout/activity_create_workout_plan.xml
+++ b/app/src/main/res/layout/activity_create_workout_plan.xml
@@ -290,12 +290,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginVertical="30dp"
             android:layout_marginEnd="25dp"
             android:background="@drawable/camera_bg"
             android:elevation="@dimen/button_elevation"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
+            android:backgroundTint="@color/dark_cyan"
             android:shadowColor="@color/black"
             android:text="Submit"
             android:textColor="@color/white"
